--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,12 @@
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +16,42 @@
     transform: rotate(360deg);
   }
 }
+/* ol, ul {
+	list-style: none;
+} */
+li {
+  width: 75px;
+}
+div.crystal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(128, 128, 128, 0.618);
+  border: 3px dashed;
+  margin: 10px;
+}
+
+div.crystals-list {
+  display: flex;
+  flex-direction: row;
+}
+div.dragon-list {
+  display: flex;
+  flex-direction: row;
+}
+div.dragon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(36, 90, 31, 0.504);
+  border: 3px solid rgba(177, 42, 42, 0.964);
+  margin: 10px;
+}
+
+
